[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-commanderenv"
version = "1.0.0"
description = "OpenEnv-compatible incident response RL environment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Hackathon Team" }
]
dependencies = [
  "fastapi>=0.104.0",
  "pydantic>=2.0.0",
  "uvicorn>=0.24.0",
  "openai>=1.3.0",
  "httpx>=0.25.0",
  "python-dotenv>=1.0.0"
]

[tool.openenv]
spec_file = "openenv.yaml"
inference_script = "inference.py"
dockerfile = "Dockerfile"
